syntax = "proto3";
package corepb;
import "github.com/dappley/go-dappley/core/pb/transaction.proto";


message Block{
    BlockHeader header = 1;
    repeated Transaction transactions = 2;
    bytes parent_hash = 3;
}

message BlockHeader{
    bytes hash = 1;
    bytes previous_hash = 2;
    int64 nonce = 3;
    int64 timestamp = 4;
    bytes signature = 5;
    uint64 height = 6;
}